--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+./Loop_Bot/node_modules/
+./offline_dl/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
