[ReverseProxy] edited config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,6 @@ services:
       - "3000:3000"
     links:
       - mongo
-    depends_on:
-      - reverseproxy
 
   mongo:
     container_name: mongo
@@ -20,8 +18,6 @@ services:
       - ./data:/data/db:rw
     ports:
       - "27017:27017"
-    depends_on:
-      - reverseproxy
 
   reverseproxy:
     image: reverseproxy
@@ -30,3 +26,5 @@ services:
       dockerfile: Dockerfile-Reverseproxy
     ports:
         - 80:80
+    depends_on:
+      - bot
